# mcp-hayabusa

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/commands/: query.md
.claude/skills/detection-engineering/: SKILL.md
.claude/skills/detection-engineering/references/: false-positive-patterns.md  severity-guide.md
.claude/skills/detection-engineering/references/example-rules/: lsass_memory_access.yml
.claude/skills/detection-engineering/scripts/: validate-rule.py
.github/workflows/: tests.yml
investigations/: 2026-07-18-kerberoasting-test.md  2026-07-18-rdp-hijacking-test.md
queries/: kerberoasting-test.txt  rdp-hijacking-test.txt
rules/custom/: azure_app_ropc_authentication.yml  lsass_memory_dump_via_comsvcs_minidump.yml  rundll32_comsvcs_minidump_command_line.yml
rules/custom/tests/: azure_app_ropc_authentication.json  lsass_memory_dump_via_comsvcs_minidump.json
scripts/: download_hayabusa.py
src/mcp_hayabusa/: hayabusa.py  server.py
tests/: conftest.py  test_hayabusa.py  test_server.py  test_validate_rule.py
