[project]
name = "mcp-hayabusa"
version = "0.1.0"
description = "MCP server that wraps the Hayabusa Windows event log forensics/timeline tool"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
    "pyyaml>=6.0",
]

[project.scripts]
mcp-hayabusa = "mcp_hayabusa.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_hayabusa"]
